installer/slideshow::fixed the deepin-music page fontSize too small
tower:https://tower.im/projects/8a6342c556be4c4eb898fdd7fd6fcb2f/todos/899a260f3af042beae7f08d996ab7094/#ad5b91e3db0b44fe8bc6eb8fb743fde1

--- a/resources/installer/ppt/slideshow2014/assets/css/main.css
+++ b/resources/installer/ppt/slideshow2014/assets/css/main.css
@@ -2,16 +2,15 @@ body, html{
     margin:0;
     width:100%;
     overflow:hidden;
-    font-size:72.5%;
 }
 
 h1{
-    font-size:1.5em;
+    font-size:0.9em;
     margin:0.2em;
 }
 
 [lang=zh] h1{
-    font-size:2.0em;
+    font-size:1.2em;
 }
 
 ul{
@@ -19,7 +18,7 @@ ul{
 }
 
 li{
-    font-size:0.875em;
+    font-size:0.65em;
     font-weight:lighter;
 }
 
